[package]
name = "firework"
version = "0.1.0"
edition = "2024"
authors = ["taki184344812@gmail.com"]
license = "MIT"
description = "A terminal-based firework simulation program written in Rust"
repository = "https://github.com/Taki-Ta/firework.git"
documentation = "https://github.com/Taki-Ta/firework.git"
readme = "README.md"
keywords = ["firework", "firework-rust", "fireworks", "firework-rust", "firework-cli"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.29.0"
rand = "0.9.1"
